--- a/docker/hoodie/hadoop/hive_base/conf/beeline-log4j2.properties
+++ b/docker/hoodie/hadoop/hive_base/conf/beeline-log4j2.properties
@@ -37,7 +37,7 @@ appender.console.layout.pattern = %d{yy/MM/dd HH:mm:ss} [%t]: %p %c{2}: %m%n
 loggers = HiveConnection
 
 # HiveConnection logs useful info for dynamic service discovery
-logger.HiveConnection.name = org.apache.hive.jdbc.HiveConnection
+logger.HiveConnection.name = io.hops.hive.jdbc.HiveConnection
 logger.HiveConnection.level = INFO
 
 # root logger
